--- a/styles/header.css
+++ b/styles/header.css
@@ -7,3 +7,11 @@
     font-weight: 600;
     font-size: 15px;
 }
+
+
+@media (max-width: 768px) {
+    .header {
+        font-size: 12px;
+        padding: 0.5em 1em;
+    }
+}
