--- a/styles/chart.css
+++ b/styles/chart.css
@@ -1,3 +1,10 @@
+.chart-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 .dollarData,
 .yenData {
     margin: 3em auto;
@@ -46,4 +53,58 @@
 
 .investments__list li {
     margin: 1em 0;
+}
+
+@media (max-width: 768px) {
+    .dollarData,
+    .yenData {
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        padding: 1em;
+    }
+
+    .chart {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+
+    .chart__title h2 {
+        font-size: 18px;
+    }
+
+    .chart__title span {
+        width: 40px;
+        height: 30px;
+    }
+
+    .investments__list {
+        margin: 1em auto;
+        text-align: center;
+    }
+
+    .investments__list li {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .dollarData,
+    .yenData {
+        padding: 0.5em;
+        width: 95%;
+    }
+
+    .chart__title h2 {
+        font-size: 16px;
+    }
+
+    .chart__title span {
+        width: 30px;
+        height: 25px;
+    }
+
+    .investments__list li {
+        font-size: 12px;
+    }
 }
