--- a/styles/footer.css
+++ b/styles/footer.css
@@ -10,3 +10,10 @@
         padding-bottom: 1em;
     }
 }
+
+@media (max-width: 480px) {
+    .footer {
+        font-size: 10px;
+        padding-bottom: 0.5em;
+    }
+}
