--- a/styles/header.css
+++ b/styles/header.css
@@ -8,10 +8,16 @@
     font-size: 15px;
 }
 
-
 @media (max-width: 768px) {
     .header {
         font-size: 12px;
         padding: 0.5em 1em;
+    }
+}
+
+@media (max-width: 480px) {
+    .header {
+        font-size: 10px;
+        padding: 0.5em 0.5em;
     }
 }
