--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -4,7 +4,6 @@
     align-items: center;
     background-color: var(--blue);
     padding: 5em 0;
-
     filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.15));
 }
 
@@ -24,6 +23,7 @@
 .sidebar__links {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .sidebar__links a {
@@ -51,47 +51,74 @@
 }
 
 .dashboard {
-    background-image: url("../images/icon-dashboard.png")
+    background-image: url("../images/icon-dashboard.png");
 }
 
 .vault {
-    background-image: url("../images/icon-vault.png")
+    background-image: url("../images/icon-vault.png");
 }
 
 .settings {
-    background-image: url("../images/icon-settings.png")
+    background-image: url("../images/icon-settings.png");
 }
 
 .faq {
-    background-image: url("../images/icon-faq.png")
+    background-image: url("../images/icon-faq.png");
 }
-
 
 @media (max-width: 768px) {
     .sidebar {
-        width: 100%;
-        padding: 1em 0;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
+        padding: 3em 1em;
     }
 
     .sidebar__avatar {
-        width: 50px;
-        margin: 0 1em;
+        width: 120px;
+    }
+
+    .sidebar__links {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1em;
+    }
+
+    .sidebar__links a {
+        font-size: 16px;
+    }
+
+    .sidebar h2 {
+        font-size: 14px;
+    }
+
+    .sidebar__line {
+        width: 80%;
+        margin: 2em 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .sidebar {
+        padding: 2em 0;
+    }
+
+    .sidebar__avatar {
+        width: 100px;
+    }
+
+    .sidebar__links {
+        flex-direction: column;
+        gap: 0.5em;
+    }
+
+    .sidebar__links a {
+        font-size: 14px;
     }
 
     .sidebar h2 {
         font-size: 12px;
     }
 
-    .sidebar__links {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 1em;
-    }
-
-    .sidebar__links a {
-        font-size: 14px;
+    .sidebar__line {
+        width: 70%;
     }
 }
